--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  Good
   uni: Udacity Job
-  year: June, 2014 &mdash; January, 2015
+  year: June, 2014 &mdash; January, 2016
   # awards:
-  # summary:
+  # summary: updated lines
